--- a/package.json
+++ b/package.json
@@ -16,6 +16,15 @@
         "lodash": "^4.17.13",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vee-validate": "^3.2.5",
+        "vue-template-compiler": "^2.6.11",
+        "vuetify": "^2.2.20"
+    },
+    "dependencies": {
+        "v-mask": "^2.1.0",
+        "vue": "^2.6.11",
+        "vue-router": "^3.1.6",
+        "vuex": "^3.1.3"
     }
 }
